right vertical scrollbar is always present to prevent moving mobile menu icon

--- a/less/header.less
+++ b/less/header.less
@@ -269,6 +269,10 @@
   }
 } //end of Header
 
+html.expanded {
+  overflow-y: scroll!important;
+}
+
 .expanded, .expanded body {
   height: 100%;
   overflow: hidden;
